# digvijay_llm

./: .gitignore  README.md  detect_params.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
digvijay_llm/: __init__.py  api.py  engine_gguf.py  engine_safetensors.py  hardware.py  ram_planner.py
examples/: run_gguf_example.py  run_safetensors_example.py
tests/: test_hardware_detection.py  test_ram_planner.py
