[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digvijay_llm"
version = "0.2.0"
description = "Run local LLMs on low-RAM machines with automatic hardware detection and streaming inference"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Digvijay Phutane" }]
keywords = ["llm", "inference", "local", "gguf", "streaming"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
gguf = [
    "llama-cpp-python>=0.2.0",
]

hf = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
]

all = [
    "llama-cpp-python>=0.2.0",
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
]
